--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$room_version"
 
     implementation "com.google.code.gson:gson:2.8.2"
+    implementation "org.ocpsoft.prettytime:prettytime:4.0.1.Final"
 
     implementation 'com.squareup.retrofit2:retrofit:2.2.0'
     implementation ('com.squareup.retrofit2:converter-simplexml:2.0.0-beta3'){
